--- a/WorkbaseImm/css/_mainGeneral.css
+++ b/WorkbaseImm/css/_mainGeneral.css
@@ -17,7 +17,7 @@ a {
 a:hover, a:focus, a:active {
     color: #18a689
 }
-#top-search {
+#inputToSearch {
     min-width: 370px;
 }
 table.dataTable thead .sorting:after, 
