--- a/WorkbaseImm/crm.Master
+++ b/WorkbaseImm/crm.Master
@@ -167,6 +167,16 @@
 
             </nav>
         </div>
+             <div class="row wrapper border-bottom white-bg page-heading">
+                <div id="pageHeading" class="col-lg-12">
+                    <h2>Trang chủ</h2>
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item">
+                            <a href="/">Trang chủ</a>
+                        </li>                       
+                    </ol>
+                </div>
+            </div>
             <asp:ContentPlaceHolder ID="ContentPageHeading" runat="server"></asp:ContentPlaceHolder>
             <div class="wrapper wrapper-content  animated fadeInRight">
                 <div class="row">
@@ -178,10 +188,10 @@
             </div>
             <div class="footer">
                 <div class="float-right">
-                    10GB of <strong>250GB</strong> Free.
+                    <strong>IMM GROUP</strong> .
                 </div>
                 <div>
-                    <strong>Copyright</strong> Example Company &copy; 2014-2018
+                    <strong>Copyright</strong> &copy; 2020
                 </div>
             </div>
         </div>
