--- a/WorkbaseImm/crm.Master
+++ b/WorkbaseImm/crm.Master
@@ -17,6 +17,7 @@
 
     <link rel="stylesheet" href="<%= ResolveClientUrl("~/css/_mainGeneral.css") %>">
      <link rel="stylesheet" href="<%= ResolveClientUrl("~/css/_masterPage.css") %>">
+    <link rel="stylesheet" href="<%= ResolveClientUrl("~/css/plugins/toastr/toastr.min.css") %>">
 </head>
 <body>
    <div id="wrapper">
@@ -227,6 +228,7 @@
     <script src="<%= ResolveClientUrl("~/js/jquery-ui.min.js") %>"></script>
     <script src="<%= ResolveClientUrl("~/js/inspinia.js") %>"></script>
     <script src="<%= ResolveClientUrl("~/js/immgroup.js") %>"></script>
+    <script src="<%= ResolveClientUrl("~/js/plugins/toastr/toastr.min.js") %>"></script>
     <asp:ContentPlaceHolder ID="Footer" runat="server">
 
        
@@ -237,6 +239,7 @@
     <script type="text/javascript">
         $().ready(function() {   
             load_control_menu();
+            checkError();
         });
 
         //Type to search on top
@@ -274,6 +277,19 @@
                 }
             });           
         });
+
+        function checkError() {
+            var _mesCode = getParameterByName('mes');
+            var _mesType = getParameterByName('mesType');
+
+            var flickerAPI = "https://api.immgroup.com/crm/message/VN/" + _mesCode;
+            $.getJSON(flickerAPI, {
+                format: "json"
+            }).done(function (data) {
+                if (data.mess !== undefined && data.mess !== "")
+                    showerror(data.mess, 'Hệ thống', _mesType, 'toast-top-center');
+            });
+        }
          
     </script>
 </html>
