--- a/WorkbaseImm/crm.Master
+++ b/WorkbaseImm/crm.Master
@@ -237,9 +237,9 @@
     <!-- Typehead -->
     <script src="<%= ResolveClientUrl("~/js/plugins/typehead/bootstrap3-typeahead.min.js") %>"></script>
     <script type="text/javascript">
-        $().ready(function() {   
-            load_control_menu();
+        $().ready(function () {   
             checkError();
+            load_control_menu();
         });
 
         //Type to search on top
@@ -279,16 +279,18 @@
         });
 
         function checkError() {
-            var _mesCode = getParameterByName('mes');
-            var _mesType = getParameterByName('mesType');
-
-            var flickerAPI = "https://api.immgroup.com/crm/message/VN/" + _mesCode;
-            $.getJSON(flickerAPI, {
-                format: "json"
-            }).done(function (data) {
-                if (data.mess !== undefined && data.mess !== "")
-                    showerror(data.mess, 'Hệ thống', _mesType, 'toast-top-center');
-            });
+            var _mesCode = getCookie("ERROR_MES") //getParameterByName('mes');
+            var _mesType = getCookie("ERROR_TYPE");
+            if (_mesCode !== "" && _mesType !== "") {
+                var flickerAPI = "https://api.immgroup.com/crm/message/VN/" + _mesCode;
+                $.getJSON(flickerAPI, {
+                    format: "json"
+                }).done(function (data) {
+                    if (data.mess !== undefined && data.mess !== "")
+                        showerror(data.mess, 'Hệ thống', _mesType, 'toast-top-center');
+                });                
+            }    
+            
         }
          
     </script>
