--- a/WorkbaseImm/css/style.css
+++ b/WorkbaseImm/css/style.css
@@ -3294,9 +3294,10 @@ select.form-control:not([size]):not([multiple]) {
 }
 /* Validation */
 label.error {
-  color: #cc5965;
-  display: inline-block;
-  margin-left: 5px;
+    color: #cc5965;
+    display: inline-block;
+    margin-left: 5px;
+    width: 100%;
 }
 .form-control.error {
   border: 1px dotted #cc5965;
@@ -9009,15 +9010,11 @@ body.skin-2 #wrapper {
 .skin-3.fixed-nav .minimalize-styl-2 {
   margin: 14px 5px 5px 15px;
 }
-.skin-3 .spin-icon {
-  background: #ecba52 !important;
-}
 body.boxed-layout.skin-3 #wrapper {
   background: #3e2c42;
 }
 .skin-3 .nav-header {
-  background-color: #ecba52;
-  background-image: url('patterns/header-profile-skin-3.png');
+    background: #f9f9f9;
 }
 .skin-3.mini-navbar .nav-second-level {
   background: #3e2c42;
@@ -9026,52 +9023,66 @@ body.boxed-layout.skin-3 #wrapper {
   background: transparent;
 }
 .skin-3 .page-heading {
-  border: none;
+    border: none !important;
+    background: #f9f9f9;
 }
 .skin-3 ul.nav-second-level {
-  background-color: inherit;
+    background-color: #f9f9f9;
 }
 .skin-3 .nav > li.active {
-  background: #38283c;
+   background: #f9f9f9;
 }
 .fixed-nav.skin-3 .navbar-fixed-top {
   background: #fff;
 }
 .skin-3 .nav > li > a {
-  color: #948b96;
+    color: #7c899a;
 }
 .skin-3 .nav > li.active > a {
-  color: #fff;
+    color: #3e5476;
+    font-weight: 700;
 }
-.skin-3 .navbar-minimalize {
-  background: #ecba52;
-  border-color: #ecba52;
-}
+
 body.skin-3 {
-  background: #3e2c42;
+    background: #f9f9f9;
+    color: #3e5476;
 }
 .skin-3 .navbar-static-top {
-  background: #ffffff;
+    background: #f9f9f9;
+}
+.skin-3 #page-wrapper > .border-bottom, .skin-3 .ibox.border-bottom {
+    border-bottom: transparent !important;
 }
 .skin-3 .dashboard-header {
-  background: transparent;
-  border-bottom: none !important;
-  border-top: none;
-  padding: 20px 30px 10px 30px;
+    border-bottom: none !important;
+    border-top: 0;
+    border-radius: 4px;
+    padding: 20px 20px 20px 20px;
+    margin: 10px 10px 0 10px;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.05), 0 1px 2px rgba(0, 0, 0, 0.1);
 }
-.skin-3 .wrapper-content {
+.skin-3 .ibox-content {
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.05), 0 1px 2px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    border: none;
+    background-color: #FFFFFF;
+}
+.skin-3 .footer {
+    border: none;
+    background: none;
+}
+.skin-3 .ibox-title {
+    background-color: transparent;
+    border: none;
+    padding-left: 5px;
+}
+.wrapper-content {
   padding: 30px 15px;
 }
 .skin-3 #page-wrapper {
-  background: #f4f6fa;
+    background: #f9f9f9;
 }
-.skin-3 .ibox-title,
-.skin-3 .ibox-content {
-  border-width: 1px;
-}
-.skin-3 .ibox-content:last-child {
-  border-style: solid solid solid solid;
-}
+
 .skin-3 .nav > li.active {
   border: none;
 }
@@ -9079,12 +9090,13 @@ body.skin-3 {
   padding: 35px 25px 25px 25px;
 }
 .skin-3 .nav-header a.dropdown-toggle {
-  color: #fff;
-  margin-top: 10px;
+    color: #384d6c;
+    margin-top: 10px;
+    text-align: left;
 }
 .skin-3 .nav-header a.dropdown-toggle .text-muted {
-  color: #fff;
-  opacity: 0.8;
+    color: #384d6c;
+    opacity: 0.8;
 }
 .skin-3 .profile-element {
   text-align: center;
@@ -9094,8 +9106,9 @@ body.skin-3 {
 }
 .skin-3 .navbar-default .nav > li > a:hover,
 .skin-3 .navbar-default .nav > li > a:focus {
-  background: #38283c;
-  color: #fff;
+    background: #f9f9f9;
+    color: #3e5476;
+    font-weight: 700;
 }
 .skin-3 .nav.nav-tabs > li.active > a {
   color: #555;
