--- a/WorkbaseImm/css/_customerProfile.css
+++ b/WorkbaseImm/css/_customerProfile.css
@@ -16,7 +16,10 @@
     }
 
 .edit-field {
-    opacity: 0
+    opacity: 0;
+    position:absolute;
+    right:1rem;
+    top:0;
 }
 
 .field-group .btn-white {
@@ -24,8 +27,11 @@
 }
 
 .edit-panel {
-    top: -25px;
+    top: 0;
     left: 0;
     z-index: 3;
     position: relative
+}
+.vertical-timeline-content .btn-actions .btn{
+    float:none;
 }
