--- a/WorkbaseImm/css/_dashboardEditInfo.css
+++ b/WorkbaseImm/css/_dashboardEditInfo.css
@@ -1,7 +1,8 @@
 ﻿.avatar{
     width:120px;
     height:120px;
-    position:relative
+    position:relative;
+    margin:0 auto;
 }
 .avatar img{
     width:100%;
@@ -40,4 +41,20 @@
 }
 .jcrop-keymgr{
     opacity:0;
+}
+.clt-name .input-group .input-group-append {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 3;
+    height: 35px;
+}
+.clt-name{
+    cursor:pointer;
+}
+.info-top {
+    position: absolute;
+    bottom: -100px;
+    left: 50%;
+    transform: translateX(-50%);
 }
