--- a/WorkbaseImm/css/plugins/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css
+++ b/WorkbaseImm/css/plugins/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css
@@ -121,10 +121,11 @@
   padding-left: 20px;
 }
 .radio label {
-  display: inline-block;
-  vertical-align: middle;
-  position: relative;
-  padding-left: 5px;
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    padding-left: 5px;
+    cursor: pointer;
 }
 .radio label::before {
   content: "";
@@ -166,9 +167,9 @@
   z-index: 1;
 }
 .radio input[type="radio"]:focus + label::before {
-  outline: thin dotted;
+  /*outline: thin dotted;
   outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
+  outline-offset: -2px;*/
 }
 .radio input[type="radio"]:checked + label::after {
   -webkit-transform: scale(1, 1);
