--- a/WorkbaseImm/css/style.css
+++ b/WorkbaseImm/css/style.css
@@ -6262,7 +6262,6 @@ dd.project-people {
 .message-avatar {
   height: 48px;
   width: 48px;
-  border: 1px solid #e7eaec;
   border-radius: 4px;
   margin-top: 1px;
 }
@@ -6290,8 +6289,9 @@ dd.project-people {
   float: left;
 }
 .chat-discussion .chat-message.left .message {
-  text-align: left;
-  margin-left: 55px;
+    text-align: left;
+    margin-left: 55px;
+    background: #0d98c70f;
 }
 .chat-discussion .chat-message.right .message {
   text-align: right;
@@ -6305,8 +6305,7 @@ dd.project-people {
   display: block;
 }
 .chat-discussion {
-  background: #eee;
-  padding: 15px;
+  background: #fff;
   height: 400px;
   overflow-y: auto;
 }
@@ -9076,9 +9075,7 @@ body.skin-3 {
     border: none;
     padding-left: 5px;
 }
-.wrapper-content {
-  padding: 30px 15px;
-}
+
 .skin-3 #page-wrapper {
     background: #f9f9f9;
 }
@@ -9576,7 +9573,7 @@ body.md-skin {
     z-index: 1030;
 }
 
-.cursor {
+.cursor, .form-check-inline .form-check-input {
     cursor: pointer;
 }
 .pt-100{
